# savings_manager_gui

./: README.md  pyproject.toml
scripts/: convert_ui_files_to_python_files.sh
src/: constants.py  main.py  utils.py
src/gui/: add_sub_dialog.py  add_sub_transfer_dialog.py  app_data_overview_widget.py  app_settings_dialog.py  main_window.py  moneybox_overview_widget.py  moneybox_settings_dialog.py  moneybox_widget.py  moneyboxes_overview_widget.py  prioritylist_widget.py  server_settings_dialog.py
src/gui/ui/: ui_add_sub_amount_dialog.py  ui_add_sub_transfer_amount_dialog.py  ui_app_data_overview_widget.py  ui_app_settings_dialog.py  ui_main_window.py  ui_moneybox_overview_widget.py  ui_moneybox_settings_dialog.py  ui_moneybox_widget.py  ui_moneyboxes_overview_widget.py  ui_prioritylist_widget.py  ui_server_settings_dialog.py
src/gui/ui/static/: add_sub_dialog.ui  add_sub_transfer_amount_dialog.ui  add_sub_transfer_dialog.ui  app_data_overview_widget.ui  app_settings_dialog.ui  main_window.ui  moneybox_overview_widget.ui  moneybox_settings_dialog.ui  moneybox_widget.ui  moneyboxes_overview_widget.ui  prioritylist_widget.ui  server_settings_dialog.ui
