[tool.poetry]
name = "savings-manager-gui"
version = "1.2.0"
description = ""
authors = ["PythBuster <pythbuster@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
savings-manager-cli = {git = "https://github.com/pythbuster/savings_manager_cli.git", rev = "main"}
pyside6 = "^6.7.2"
qasync = "^0.27.1"
pydantic = {extras = ["email"], version = "^2.8.2"}


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
isort = "^5.13.2"
flake8 = "^7.1.1"
pylint = "^3.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
